--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/computer_kawaii_icon.ico">
+  <meta name="description" content="Hi my name is Bryanna Torres and this is my recent resume. I am looking for a job on any digital media platform. I am great at editing and VFX.">
+  <meta name="author" content="862172552">
 
-  <title>John Doe - Business Administration</title>
+  <title>Bryanna Torres - Editing/VFX Artist</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Bryanna Torres</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Bryanna_Torres (2).jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Bryanna Torres
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Editing/VFX Artist🖥️</div>
+        <p class="lead mb-4">Hello, my name is Bryanna Torres and I am an undergraduate student of the University of California Riverside and I have a bachelor of the Arts.<br><br>
 
-        Enter bio here<br><br>
+        I am currently an intern for a youtube channel called "React To Channel."<br><br>
 
-        Enter bio here
+        My goal is to persue my dreams of working for a very well known company called Digital Domain which also works for Walt Disney Studios and Marvel Studios. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://open.spotify.com/show/5By4l4SM7RpGGputBtPQnD?si=F2zo-NYrQDCg479Cq0tcZQ&nd=1">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/bryari">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/AddAlways">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:btorr056@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -93,25 +93,25 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="http://www.deckers.com/">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Warehouse associate for Deckers Brands in inventory working on the computer<br> 
+              • Experience with HTML, CSS, Javascript, Photoshop at UCR<br>
+              • Experience with editing and visual effects as a intern "React To Channel"<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2020 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Retail</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.target.com/">Target</a></div>
             <p>
               • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for helping customers with returns, exchange, and problems/questions they may have<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -128,12 +128,12 @@
             • Ran sessions to help students learn how to code<br>
             • Reviewed and graded student coding projects<br>
             • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Helped the librarian with organizing books, and inporting information on the computer<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2019 - Current</span>
           </div>
         </div>
 
@@ -152,36 +152,28 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Degree in The Arts</div>
+            <div>Major in Theatre, Film, and Digital Production with a concentration in Film Making</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2019 - Current</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Moreno Valley High School</h3>
+            <div class="subheading mb-3">Graduation Certificate of 2019</div>
+            <div>• Vice President of Spanish Club</div>
+            <div>• Member of the Math Club</div>
+            <div>• Member of the Book Club</div>
+            <div>• Volunteer in front office</div>
+            <div>• Volunteer in the library</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">August 2015 - June 2019</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -191,7 +183,13 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/deckerswarehouse.jpg" width="500px">
+            <img src="img/target_employee.jpg" width="500px"><br>
+            <img src="img/UCR_students_in_class.jpg" width="500">
+            <img src="img/ClassofUCR.png" width="500px"><br>
+            <img src="img/Friends_UCR.jpg" width="500">
+            <img src="img/Musical_UCR.jpg" width="500px"><br>
+            <img src="img/UCR_friend.JPG" width="500">
         </center>
       </div>
     </section>
@@ -199,7 +197,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Bryanna Torres </center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
